# reasonkit

./: .gitignore  Cargo.toml  README.md  deny.toml
.cargo/: audit.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml  sync-release.yml
reasonkit/: CLAUDE.md  Cargo.toml  README.md
reasonkit-core/: CICD_IMPLEMENTATION.md  Cargo.toml  GETTING_STARTED.md  README.md  RELEASE_NOTES_v0.1.0.md
reasonkit-core/.github/: GOOD_FIRST_ISSUES.md
reasonkit-core/.github/ISSUE_TEMPLATE/: performance.yml
reasonkit-core/.github/workflows/: brand-assets.yml
reasonkit-core/TASKS/: docs-refactor.md
reasonkit-core/brand/: BRANDING_INTEGRATION_GUIDE.md  BRAND_PLAYBOOK.md  INTEGRATION_CHECKLIST.md  MOTION_DESIGN_GUIDELINES.md
reasonkit-core/brand/expansion-packs/: INSTALLATION_GUIDES.md  REASONING_MANIFESTO_IMAGE_PROMPT.md
reasonkit-core/docs/getting-started/: QUICKSTART.md
reasonkit-core/docs/integrations/: ANTHROPIC_INTEGRATION.md  GOOGLE_INTEGRATION.md  GROQ_INTEGRATION.md  OPENAI_INTEGRATION.md  OPENROUTER_INTEGRATION.md  README.md
reasonkit-core/docs/process/: RELEASE_CHECKLIST.md
reasonkit-core/docs/templates/: DOC_TEMPLATE.md
reasonkit-core/examples/: langchain_integration.md
reasonkit-core/examples/tutorial/: run_all.sh  step1_basic.sh  step2_profiles.sh  step3_individual_tools.sh  step4_json_output.sh  step5_audit_trail.sh
reasonkit-core/protocols/: VERBOSE_THINKING_PATTERNS.md
reasonkit-mem/: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  pyproject.toml
reasonkit-mem/.github/: labeler.yml
reasonkit-mem/.github/ISSUE_TEMPLATE/: performance.yml
reasonkit-mem/benches/: fusion_bench.rs  raptor_bench.rs  storage_bench.rs
reasonkit-mem/docs/: DUAL_LAYER_STORAGE_ARCHITECTURE.md  EMBEDDED_MODE_GUIDE.md  EMBEDDING_PIPELINE_GUIDE.md  HYBRID_SEARCH_GUIDE.md  RAPTOR_TREE_GUIDE.md  STORAGE_API.md  data_models.md  persistence.md
reasonkit-mem/examples/: quick-start-mem.rs
reasonkit-mem/src/: error.rs  service.rs
reasonkit-mem/src/indexing/: mod.rs
reasonkit-mem/src/rag/: mod.rs
reasonkit-mem/src/retrieval/: expansion.rs  mod.rs
reasonkit-mem/src/storage/: cold.rs  scalability.rs  serde_utils.rs
reasonkit-mem/tests/: crash_recovery_tests.rs  cross_crate_integration_tests.rs  integration.rs  lib_integration_tests.rs  proptest_storage.rs.disabled  storage_comprehensive_tests.rs  stress_tests.rs
reasonkit-web/: Cargo.toml  README.md
reasonkit-web/scripts/: configure.sh  install.sh  uninstall.sh  verify.sh
reasonkit-web/systemd/: install.sh
reasonkit/.github/: COMPONENT_DISPATCH_TEMPLATE.md
reasonkit/.github/workflows/: ci.yml  release.yml  sync-release.yml
reasonkit/src/: rk.rs
src/: lib.rs  main.rs
